--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,16 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
     implementation "com.jakewharton:butterknife:10.0.0"
     annotationProcessor "com.jakewharton:butterknife-compiler:10.0.0"
+
+    //Android-SpinKit
+    implementation 'com.github.ybq:Android-SpinKit:1.2.0'
+
+    //Okgo
+    implementation 'com.lzy.net:okgo:3.0.4'
+
+    //FastJson
+    implementation 'com.alibaba:fastjson:1.1.71.android'
+
+    //Gson
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
