--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".pages.SplashActivity"
+            android:theme="@style/Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,6 +37,7 @@
         <activity android:name=".pages.LoginActivity"/>
         <activity android:name=".pages.RegisterActivity"/>
         <activity android:name=".pages.SelTimeLocActivity"/>
+        <activity android:name=".MainActivity"/>
     </application>
 
 </manifest>
